--- a/README.org
+++ b/README.org
@@ -129,6 +129,42 @@ cp torus.el ~/.emacs/plug
 and restart Emacs, or just =eval-buffer= the duo and torus files.
 
 
+*** El-get
+
+If you use el-get, just create the recipe files ~duo.rcp~ :
+
+#+begin_src emacs-lisp
+(:name duo
+       :website "http://github.com/chimay/duo"
+       :description "In place list operations in Elisp"
+       :branch "master"
+       :depends ()
+       :type github
+       :pkgname "chimay/duo")
+#+end_src
+
+and ~torus.rcp~ :
+
+#+begin_src emacs-lisp
+  (:name torus
+         :website "http://github.com/chimay/torus"
+         :description "Buffer groups manager"
+         :branch "version-2"
+         :depends (duo)
+         :type github
+         :pkgname "chimay/torus")
+#+end_src
+
+Then, add them to a directory present in ~el-get-recipe-path~ and use
+~M-x el-get-install <RET> torus~ or add :
+
+#+begin_src emacs-lisp
+(el-get-bundle torus)
+#+end_src
+
+to your init file.
+
+
 ** Version 1
 
 
