--- a/README.org
+++ b/README.org
@@ -30,7 +30,7 @@
 
 * News
 
-Version 2 is out ! Check the README.org of branch =version-2=, either on github or,
+Version 2 is out ! Check the =README.org= of branch =version-2=, either on github or,
 if you have a local clone :
 
 #+BEGIN_SRC
