--- a/README.org
+++ b/README.org
@@ -615,6 +615,8 @@ the declaration :
     :after (duo)
     :bind-keymap ("s-t" . torus-map)
     :bind (("<s-insert>" . torus-add-here)
+           ("s-f" . torus-add-file)
+           ("s-b" . torus-add-buffer)
            ("<S-s-insert>" . torus-add-circle)
            ("<s-delete>" . torus-delete-location)
            ("<S-s-delete>" . torus-delete-circle)
@@ -630,8 +632,13 @@ the declaration :
            ("<S-prior>" . torus-newer)
            ("<S-next>" . torus-older)
            ("C-^" . torus-alternate)
-           ("<S-home>" . torus-alternate-circles)
+           ("s-^" . torus-alternate-menu)
+           ("<S-home>" . torus-alternate-in-same-torus-other-circle)
            ("<S-end>" . torus-alternate-in-same-circle)
+           ("<M-prior>" . torus-move-location-backward)
+           ("<M-next>" . torus-move-location-forward)
+           ("<M-home>" . torus-rotate-circle-left)
+           ("<M-end>" . torus-rotate-circle-right)
            ("s-%" . torus-layout-menu)
            ("s-g" . torus-autogroup-menu)
            :map torus-map
@@ -639,19 +646,19 @@ the declaration :
     :hook ((emacs-startup . torus-hello)
            (kill-emacs . torus-bye))
     :custom ((torus-prefix-key "s-t")
-             (torus-binding-level 3)
-             (torus-verbosity 3)
+             (torus-binding-level 2)
+             (torus-verbosity 1)
              (torus-dirname "~/.emacs.d/torus")
              (torus-load-on-startup t)
              (torus-save-on-exit t)
              (torus-autoread-file "auto")
              (torus-autowrite-file "auto")
-             (torus-backup-number 7)
+             (torus-backup-number 5)
              (torus-history-maximum-elements 50)
              (torus-maximum-horizontal-split 3)
              (torus-maximum-vertical-split 4)
              (torus-display-tab-bar t)
-             (torus-prefix-separator "/")
+             (torus-prefix-separator " : ")
              (torus-join-separator " & "))
     :config
     (torus-init)
